--- a/thesis_1.uproject
+++ b/thesis_1.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "thesis_1",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
