Added arena to testing dash. Added DashingGuy so i can prototype dashing in bp before I write it in CharacterMovementComponent. Removed unused BasePlayerController_BP

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -51,6 +51,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Skill3",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Skill2",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Skill3",Key=Four,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="ExperimentalDash",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
