Deleted more stuff becouse after UsedBy array i could not cast any skill

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-EditorStartupMap=/Game/Levels/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/MyGamemode.MyGamemode_C
+GameDefaultMap=/Game/Levels/TestArena.TestArena
+EditorStartupMap=/Game/Levels/TestArena.TestArena
+GlobalDefaultGameMode=/Game/Blueprints/Gameplay/TestGM.TestGM_C
 GameInstanceClass=/Game/Blueprints/AllLevels/GameInfoInstance.GameInfoInstance_C
+GlobalDefaultServerGameMode=/Game/Blueprints/Gameplay/TestGM.TestGM_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/thesis_1")
@@ -59,5 +60,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
